--- a/HACC-AP/analytics.html
+++ b/HACC-AP/analytics.html
@@ -76,7 +76,7 @@
 				<svg id="fillgauge1" width="97%" height="250" onclick="gauge1.update(NewValue());"></svg>
 				<svg id="fillgauge2" width="19%" height="200" onclick="gauge2.update(NewValue());"></svg>
 				<svg id="fillgauge3" width="19%" height="200" onclick="gauge3.update(NewValue());"></svg>
-				<svg id="fillgauge4" width="19%" height="200" onclick="gauge4.update(NewValue());"></svg>
+				<!-- <svg id="fillgauge4" width="19%" height="200" onclick="gauge4.update(NewValue());"></svg> -->
 				<!-- <svg id="fillgauge5" width="19%" height="200" onclick="gauge5.update(NewValue());"></svg> -->
 				<!-- <svg id="fillgauge6" width="19%" height="200" onclick="gauge6.update(NewValue());"></svg> -->
 				<script language="JavaScript">
@@ -110,22 +110,22 @@
 					config3.waveOffset = 0.25;
 					config3.valueCountUp = false;
 					config3.displayPercent = false;
-					var gauge4 = loadLiquidFillGauge("fillgauge4", 50, config3);
-					var config4 = liquidFillGaugeDefaultSettings();
-					config4.circleThickness = 0.15;
-					config4.circleColor = "#808015";
-					config4.textColor = "#555500";
-					config4.waveTextColor = "#FFFFAA";
-					config4.waveColor = "#AAAA39";
-					config4.textVertPosition = 0.8;
-					config4.waveAnimateTime = 1000;
-					config4.waveHeight = 0.05;
-					config4.waveAnimate = true;
-					config4.waveRise = false;
-					config4.waveHeightScaling = false;
-					config4.waveOffset = 0.25;
-					config4.textSize = 0.75;
-					config4.waveCount = 3;
+					<!-- var gauge4 = loadLiquidFillGauge("fillgauge4", 50, config3); -->
+					<!-- var config4 = liquidFillGaugeDefaultSettings(); -->
+					<!-- config4.circleThickness = 0.15; -->
+					<!-- config4.circleColor = "#808015"; -->
+					<!-- config4.textColor = "#555500"; -->
+					<!-- config4.waveTextColor = "#FFFFAA"; -->
+					<!-- config4.waveColor = "#AAAA39"; -->
+					<!-- config4.textVertPosition = 0.8; -->
+					<!-- config4.waveAnimateTime = 1000; -->
+					<!-- config4.waveHeight = 0.05; -->
+					<!-- config4.waveAnimate = true; -->
+					<!-- config4.waveRise = false; -->
+					<!-- config4.waveHeightScaling = false; -->
+					<!-- config4.waveOffset = 0.25; -->
+					<!-- config4.textSize = 0.75; -->
+					<!-- config4.waveCount = 3; -->
 					<!-- var gauge5 = loadLiquidFillGauge("fillgauge5", 60.44, config4); -->
 					<!-- var config5 = liquidFillGaugeDefaultSettings(); -->
 					<!-- config5.circleThickness = 0.4; -->
