--- a/HACC-AP/clean-nature-energy.html
+++ b/HACC-AP/clean-nature-energy.html
@@ -36,13 +36,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Settings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Help</a>
+            <a class="nav-link" href="#">Analytics</a>
           </li>
 	  <li class="nav-item">
             <a class="nav-link" href="#">Upload</a>
