--- a/HACC-AP/clean-energy-transformation.html
+++ b/HACC-AP/clean-energy-transformation.html
@@ -39,10 +39,7 @@
             <a class="nav-link" href="#">Settings</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Help</a>
+            <a class="nav-link" href="#">Analytics</a>
           </li>
 	 <li class="nav-item">
             <a class="nav-link" href="#">Upload</a>
