--- a/HACC-AP/clean-food-energy.html
+++ b/HACC-AP/clean-food-energy.html
@@ -36,15 +36,9 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Settings</a>
+            <a class="nav-link" href="#">Analytics</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Help</a>
-          </li>
-	  <li class="nav-item">
             <a class="nav-link" href="#">Upload</a>
           </li>
 	  
