--- a/HACC-AP/clean-energy-transformation.html
+++ b/HACC-AP/clean-energy-transformation.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Analytics</a>
           </li>
 	 <li class="nav-item">
-            <a class="nav-link" href="/dataUpload/dataUpload">Upload</a>
+            <a class="nav-link" href="/dataUpload">Upload</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
