--- a/HACC-AP/clean-waste-energy.html
+++ b/HACC-AP/clean-waste-energy.html
@@ -38,8 +38,8 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Analystics</a>
           </li>
-	  <li class="nav-item">
-            <a class="nav-link" href="#">Upload</a>
+	  <li class="nav-item"> 
+	    <a class="nav-link" href="/dataUpload">Upload</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
