--- a/HACC-AP/clean-waste-energy.html
+++ b/HACC-AP/clean-waste-energy.html
@@ -54,10 +54,10 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/clean-energy-transformation">Aloha+Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/clean-energy-transformation">Aloha+Energy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-waste-energy">Aloha+Waste</a>
+              <a class="nav-link active" href="/clean-waste-energy">Aloha+Waste<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/clean-food-energy">Aloha+Food</a>
