--- a/HACC-AP/clean-nature-energy.html
+++ b/HACC-AP/clean-nature-energy.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Analytics</a>
@@ -54,7 +54,7 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/clean-energy-transformation">Aloha+Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/clean-energy-transformation">Aloha+Energy</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/clean-waste-energy">Aloha+Waste</a>
@@ -63,7 +63,7 @@
               <a class="nav-link" href="/clean-food-energy">Aloha+Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-nature-energy">Aloha+Nature</a>
+              <a class="nav-link active" href="/clean-nature-energy">Aloha+Nature <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </nav>
