--- a/HACC-AP/clean-food-energy.html
+++ b/HACC-AP/clean-food-energy.html
@@ -25,7 +25,7 @@
 
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Dashboard</a>
+      <a class="navbar-brand" href="#">Aloha+</a>
       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -55,16 +55,16 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link" href="/clean-energy-transformation">Aloha+Energy</a>
+              <a class="nav-link" href="/clean-energy-transformation">Energy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-waste-energy">Aloha+Waste</a>
+              <a class="nav-link" href="/clean-waste-energy">Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/clean-food-energy">Aloha+Food<span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/clean-food-energy">Food<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-nature-energy">Aloha+Nature</a>
+              <a class="nav-link" href="/clean-nature-energy">Nature</a>
             </li>
           </ul>
         </nav>
