--- a/HACC-AP/clean-energy-transformation.html
+++ b/HACC-AP/clean-energy-transformation.html
@@ -54,16 +54,16 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/clean-energy-transformation">Aloha+Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/clean-energy-transformation">Energy <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-waste-energy">Aloha+Waste</a>
+              <a class="nav-link" href="/clean-waste-energy">Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-food-energy">Aloha+Food</a>
+              <a class="nav-link" href="/clean-food-energy">Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-nature-energy">Aloha+Nature</a>
+              <a class="nav-link" href="/clean-nature-energy">Nature</a>
             </li>
           </ul>
         </nav>
