--- a/HACC-AP/index.html
+++ b/HACC-AP/index.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Over View<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Settings</a>
@@ -71,7 +71,7 @@
           </ul>
         </nav>
 
-        <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+        <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main" id="main">
           <h1>Dashboard</h1>
   <p id="debug">debug</p>
           <svg id="canvas" width="1000" height="1000">
@@ -85,26 +85,39 @@
 
 <script>
 
-var data = [50,30,20,10,56, 16];
-// var labels = ["","",""];
-
+var data = [
+  {label:"name1",val:50},
+  {label:"name2",val:30},
+  {label:"name3",val:20},
+  {label:"name4",val:10},
+  {label:"name5",val:56},
+  {label:"name6",val:26}];
+var dataid = "dt1";
 var canv = d3.select("#canvas");
 
 // start
 var t_line_grow = 500;
-var t_poly_grow = 500;
+var t_text_appear = 700;
+var t_poly_grow = 700;
 
 var orig_cx = 200;
 var orig_cy = 200;
 var radius = 150;
 var num = data.length;
-var max_val = Math.max.apply(null,data);
+var max_val = Math.max.apply(null,data.map(function(d){return d.val;}));
+var polysubid = ["back", "data"];
 
-var lines = canv.selectAll("line").data(data).enter().append("line");
-var polygons = canv.selectAll("polygon").data(["back", "data"])
+d3.selectAll("#debug").text("asdf");
+d3.select("#main").selectAll("p").data(data).enter().append("p").text(function(d){return d.label;});
+
+var lines = canv.selectAll("line").data(data).enter().append("line").attr("id",function(d){return dataid + "-" + d.label;});
+var polygons = canv.selectAll("polygon").data(polysubid)
     .enter().append("polygon").attr("id",function(d){ return d; });
 var back = canv.select("#back");
 var poly = canv.select("#data");
+var labels = canv.selectAll("text").data(data).enter().append("text")
+    .attr("id",function(d){return dataid + "-" + d.label;})
+    .text(function(d){return d.label;});
 
 //initialize background polygon
 back.attr("points",""+orig_cx+","+orig_cy).attr("opacity","0.3").attr("fill","gray")
@@ -117,23 +130,44 @@ back.attr("points",""+orig_cx+","+orig_cy).attr("opacity","0.3").attr("fill","gr
         ].join(",");
       }).join(" ");
     });
-//initialize lines
+//extend the lines
 lines
   .attr("stroke","black").attr("stroke-width","2")
   .attr("x1",orig_cx).attr("y1",orig_cy)
-  .attr("x2",orig_cx).attr("y2",orig_cy);
-//extend the lines
-lines.transition().duration(t_line_grow)
+  .attr("x2",orig_cx).attr("y2",orig_cy)
+  .transition().duration(t_line_grow)
   .attr("x2",function(d,i){ return radius*Math.cos(Math.PI*2/num*i-Math.PI/2)+orig_cx; })
   .attr("y2",function(d,i){ return radius*Math.sin(Math.PI*2/num*i-Math.PI/2)+orig_cy; });
+//display the labels
+labels
+  .attr("fill","white")
+  .attr("x",function(d,i){ return (20+radius)*Math.cos(Math.PI*2/num*i-Math.PI/2)+orig_cx; })
+  .attr("y",function(d,i){ return (20+radius)*Math.sin(Math.PI*2/num*i-Math.PI/2)+orig_cy; })
+  .attr("text-anchor",function(d,i){
+    if(i == 0 || i == num/2){ return "middle"; }
+    else if(i < num/2){ return "start"; }
+    else{ return "end"; }
+  })
+  .transition().delay(t_line_grow).duration(t_text_appear)
+  .attr("fill","green");
 //extend the polygon
-poly.attr("points",""+orig_cx+","+orig_cy).attr("opacity","0.4").attr("fill","green").transition().delay(t_line_grow).duration(t_poly_grow)
+poly
   .attr("points",
     function() {
       return data.map(function(d,i) {
         return [
-          radius*d/max_val*Math.cos(Math.PI*2/num*i-Math.PI/2)+orig_cx,
-          radius*d/max_val*Math.sin(Math.PI*2/num*i-Math.PI/2)+orig_cy
+          orig_cx,
+          orig_cy
+        ].join(",");
+      }).join(" ");
+    })
+  .attr("opacity","0.4").attr("fill","green").transition().delay(t_line_grow).duration(t_poly_grow)
+  .attr("points",
+    function() {
+      return data.map(function(d,i) {
+        return [
+          d.val*radius/max_val*Math.cos(Math.PI*2/num*i-Math.PI/2)+orig_cx,
+          d.val*radius/max_val*Math.sin(Math.PI*2/num*i-Math.PI/2)+orig_cy
         ].join(",");
       }).join(" ");
     });
