--- a/HACC-AP/clean-energy-transformation.html
+++ b/HACC-AP/clean-energy-transformation.html
@@ -60,7 +60,7 @@
               <a class="nav-link" href="/waste-reduction">Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-food-energy">Food</a>
+              <a class="nav-link" href="/local-food">Food</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/resource-management">Nature</a>
