--- a/HACC-AP/clean-food-energy.html
+++ b/HACC-AP/clean-food-energy.html
@@ -61,7 +61,7 @@
               <a class="nav-link" href="/waste-reduction">Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/clean-food-energy">Food<span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/local-food">Food<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/resource-management">Nature</a>
