--- a/HACC-AP/waste-reduction.html
+++ b/HACC-AP/waste-reduction.html
@@ -60,7 +60,7 @@
               <a class="nav-link active" href="/waste-reduction">Waste<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-food-energy">Food</a>
+              <a class="nav-link" href="/local-food">Food</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/resource-management">Nature</a>
