--- a/HACC-AP/local-food.html
+++ b/HACC-AP/local-food.html
@@ -25,7 +25,7 @@
 
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">ALOHA PLUS</a>
+      <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
