--- a/HACC-AP/analytics/waste-reduction.html
+++ b/HACC-AP/analytics/waste-reduction.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Analytics <span class="sr-only">(current)</span></a>
           </li>
 	  <li class="nav-item"> 
-	    <a class="nav-link" href="/data-upload/">Upload</a>
+	    <a class="nav-link" href="/data-upload/clean-energy">Upload</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
