--- a/HACC-AP/data-upload/waste-reduction.html
+++ b/HACC-AP/data-upload/waste-reduction.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="/analytics/clean-energy">Analytics</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/data-upload/">Upload <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/data-upload/clean-energy">Upload <span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
