--- a/HACC-AP/data-upload/waste-reduction.html
+++ b/HACC-AP/data-upload/waste-reduction.html
@@ -101,7 +101,7 @@
                 <div class="col-sm-10">
                   <div class="form-check">
                      <label class="form-check-label">
-                      <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios1" value="option1" checked>
+                      <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios1" value="option1">
                       Yes
                     </label>
                    </div>
@@ -125,7 +125,7 @@
                 <div class="col-sm-10">
                   <div class="form-check">
                      <label class="form-check-label">
-                      <input class="form-check-input" type="radio" name="gridRadios3" id="gridRadios1" value="option1" checked>
+                      <input class="form-check-input" type="radio" name="gridRadios3" id="gridRadios1" value="option1">
                       Yes
                     </label>
                    </div>
